--- a/views/register.pug
+++ b/views/register.pug
@@ -3,8 +3,8 @@ block page
 	- var menu = 'login'
 block content
 	div.ms-Grid
-		div.ms-Grid-row
-			div.ms-Grid-col.ms-u-mdPush1.ms-u-md9.ms-u-lgPush1.ms-u-lg6
+		div.row
+			div.tb-1-m0.tb-9-m1.tb-1-m2
 				
 				p.ms-font-xl Already Registered?
 				a.ms-Button.ms-Button--primary(href="/login", role="button", ariaDescription="Log in")
