--- a/views/includes/edit.pug
+++ b/views/includes/edit.pug
@@ -34,8 +34,8 @@ if (infowindow === 'new')
 				label.ms-Label Link
 				input.ms-TextField-field(type="text", name="website")
 			
-			p.ms-font-l Type
-			p.ms-font-s Please choose only one.
+			p.ms-font-m Type
+			p.ms-font-s Base category
 				div.row
 					div.tb-11-m0
 						div.ms-ChoiceField
@@ -368,19 +368,19 @@ if (infowindow === 'edit')
 					input.ms-TextField-field(type="tel", name="phone", value= doc.properties.phone)
 				div.ms-TextField
 					label.ms-Label Description
-					textarea.ms-TextField-field(type="text", name="description", value= doc.properties.description)
+					textarea.ms-TextField-field(type="text", name="description") #{doc.properties.description}
 				div.ms-TextField
 					label.ms-Label Link
 					input.ms-TextField-field(type="text", name="website", value= doc.properties.website)
 			
 			div.tb-11-m0
 				p.ms-font-xl #{doc.properties.label}
-				p.ms-font-l Type
-				p.ms-font-s.ms-fontWeight-semibold Please choose only one.
+				p.ms-font-m Type
+				p.ms-font-s.ms-fontWeight-semibold Base category
 					div.row
 						div.tb-11-m0
-							div(class=(doc.properties.cat === 'B')?"ms-ChoiceField":"ms-ChoiceField")
-								if (doc.properties.cat === 'B')
+							div(class=(doc.properties.cat.indexOf('B') !== -1)?"ms-ChoiceField":"ms-ChoiceField")
+								if (doc.properties.cat.indexOf('B') !== -1)
 									input(id="b", type="checkbox", "checked", aria-checked="true", class="ms-ChoiceField-input is-checked", name="b")
 								else
 									input(id="b", type="checkbox", aria-checked="false", class="ms-ChoiceField-input", name="b")
@@ -388,8 +388,8 @@ if (infowindow === 'edit')
 									span.ms-label Travel
 						
 						div.tb-11-m0
-							div(class=(doc.properties.cat === 'F')?"ms-ChoiceField":"ms-ChoiceField")
-								if (doc.properties.cat === 'F')
+							div(class=(doc.properties.cat.indexOf('F') !== -1)?"ms-ChoiceField":"ms-ChoiceField")
+								if (doc.properties.cat.indexOf('F') !== -1)
 									input(id="f", type="checkbox", "checked", aria-checked="true", class="ms-ChoiceField-input is-checked", name="f")
 								else
 									input(id="f", type="checkbox", aria-checked="false", class="ms-ChoiceField-input", name="f")
@@ -397,8 +397,8 @@ if (infowindow === 'edit')
 									span.ms-label Food
 						
 						div.tb-11-m0
-							div(class=(doc.properties.cat === 'H')?"ms-ChoiceField":"ms-ChoiceField")
-								if (doc.properties.cat === 'H')
+							div(class=(doc.properties.cat.indexOf('H') !== -1)?"ms-ChoiceField":"ms-ChoiceField")
+								if (doc.properties.cat.indexOf('H') !== -1)
 									input(id="h", type="checkbox", "checked", aria-checked="true", class="ms-ChoiceField-input is-checked", name="h")
 								else
 									input(id="h", type="checkbox", aria-checked="false", class="ms-ChoiceField-input", name="h")
@@ -406,8 +406,8 @@ if (infowindow === 'edit')
 									span.ms-label Housing
 						
 						div.tb-11-m0
-							div(class=(doc.properties.cat === 'M')?"ms-ChoiceField":"ms-ChoiceField")
-								if (doc.properties.cat === 'M')
+							div(class=(doc.properties.cat.indexOf('M') !== -1)?"ms-ChoiceField":"ms-ChoiceField")
+								if (doc.properties.cat.indexOf('M') !== -1)
 									input(id="m", type="checkbox", "checked", aria-checked="true", class="ms-ChoiceField-input is-checked", name="m")
 								else
 									input(id="m", type="checkbox", aria-checked="false", class="ms-ChoiceField-input", name="m")
