--- a/views/includes/gallery.pug
+++ b/views/includes/gallery.pug
@@ -3,14 +3,14 @@
 - var sidepanel = 'tb-11-m0'
 
 div.ms-Grid#mainpanel(v-if="infowindow && infowindow === 'edit' || infowindow === 'new'")
-	div.row.ms-Panel-contentInner
-		include edit.pug
+	//- div.row.ms-Panel-contentInner
+	include edit.pug
 div.ms-Grid#mainpanel(v-else-if="doc && doc !== ''")
-	div.row.ms-Panel-contentInner
-		include doc.pug
+	//- div.row.ms-Panel-contentInner
+	include doc.pug
 div.ms-Grid#mainpanel(v-else-if="geo.length > 0")
-	div.row.ms-Panel-contentInner
-		include list.pug
+	//- div.row.ms-Panel-contentInner
+	include list.pug
 //- if (infowindow)
 //- 	- console.log(infowindow)
 //- 	if (infowindow === 'edit' || infowindow === 'new')
