--- a/views/login.pug
+++ b/views/login.pug
@@ -2,9 +2,9 @@ extends layout
 block page
 	- var menu = 'login'
 block content
-	div.ms-Grid
+	div.ms-Grid(style="pointer-events: auto;")
 		div.row
-			div.tb-1-m0.tb-9-m1.tb-1-m2
+			div.tb-11-m0.tb-9-m1.tb-2-m2
 				p.ms-font-xl Enter username and password
 				form(enctype="multipart/form-data", method="POST", action="/login")
 					div.ms-TextField
